fix: Cleanup, resolve most sonarcloud warnings